--- a/app/src/main/res/layout/vacc_card.xml
+++ b/app/src/main/res/layout/vacc_card.xml
@@ -162,7 +162,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Sinopharm - MOH"
+                    android:text="Sinopharm - DOH"
                     android:textSize="13.3sp" />
 
 
